--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,9 @@ body {
     padding: 50px 0;
 }
 
-.header h1 {
-    font-size: 3rem;
-    margin-bottom: 50px;
+.header img {
+    max-width: 200px;
+    margin-bottom: 30px;
 }
 
 .header h2 {
@@ -31,6 +31,22 @@ body {
     margin-bottom: 10px;
 }
 
+.header .btn-primary {
+    background: #ff4f4f;
+    padding: 8px 12px;
+    border-radius: 5px;
+    border: none;
+    color: #fff;
+    font-weight: bold;
+    cursor: pointer;
+    margin-top: 20px;
+    transition: all .3s ease;
+}
+
+.header .btn-primary:hover {
+    background: #fa2121;
+}
+
 /* MAIN */
 .main {
     margin-bottom: 50px;
@@ -40,7 +56,21 @@ body {
 .main .section-form {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
+    background: #ff4f4f;
+    width: 50%;
+    margin: 0 auto;
+    padding: 20px 0;
+    border-radius: 10px;
+}
+
+.main .section-form h3 {
+    max-width: 60%;
+    font-size: 1.5rem;
+    text-align: right;
+    margin: auto 30px auto auto;
+    color: #fff;
+    line-height: 2rem;
 }
 
 .main .section-form form {
@@ -49,27 +79,42 @@ body {
 }
 
 .main .section-form input {
-    margin-bottom: 5px;
+    max-width: 70%;
+    margin-bottom: 10px;
     padding: 8px;
     border-radius: 5px;
-    border: 1px solid #c9c9c9;
+    border: 1px solid #dfdfdf;
+    box-sizing: border-box;
+    background: none;
+}
+
+.main .section-form input::placeholder {
+    color: #dfdfdf;
 }
 
 .main .section-form button {
+    max-width: 70%;
     margin-bottom: 5px;
     padding: 8px;
     border-radius: 5px;
     border: none;
+    font-weight: bold;
+    background: #fff;
     cursor: pointer;
 }
 
 /* DONATORS */
 .main .section-donators {
-    
+    margin-top: 40px;
 }
 
 .main .section-donators h2 {
+    font-size: 1.5rem;
     margin-bottom: 20px;
+}
+
+.main .section-donators span {
+    color: #ff4f4f;
 }
 
 .main .section-donators .donators {
@@ -83,6 +128,7 @@ body {
 }
 
 .footer p {
+    border-top: 1px solid #dfdfdf;
     text-align: center;
     padding: 10px 0;
 }
